(!) Added some of B3-default3 template features to default3 template

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2679,6 +2679,10 @@ body.modal-open {
 			margin-bottom: 10px;
 		}
 
+		.spSearchBottom button {
+			width: 100%;
+		}
+
 		.tab-pane {
 			min-height: inherit;
 		}
