small color change

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -465,7 +465,7 @@
 			.icon-remove-sign {
 				color: @font-sobipro;
 			}
-
+			.icon-thumbs-down-alt,
 			a.checkedout .icon-lock {
 				color: #b22222;
 			}
