--- a/Site/media/css/bootstrap/datepicker.css
+++ b/Site/media/css/bootstrap/datepicker.css
@@ -1,25 +1,30 @@
 .clearfix {
 	*zoom: 1;
 }
+
 .clearfix:before,
 .clearfix:after {
 	display: table;
 	content: "";
 	line-height: 0
 }
+
 .clearfix:after {
 	clear: both;
 }
+
 .btn.btn-calendar-chevron {
 	padding: 3px 3px;
 	margin: 0;
 	background-color: transparent;
 }
+
 .bootstrap-datetimepicker-widget a.btn-calendar-chevron [class^="icon-"] {
 	font-size: 18px;
 	padding-left: 5px;
 	padding-right: 5px;
 }
+
 .hide-text {
 	font: 0/0 a;
 	color: transparent;
@@ -27,6 +32,7 @@
 	background-color: transparent;
 	border: 0;
 }
+
 .input-block-level {
 	display: block;
 	width: 100%;
@@ -35,18 +41,20 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+
 .bootstrap-datetimepicker-widget {
 	top: 0;
 	left: 0;
 	width: 250px;
 	padding: 4px;
 	margin-top: 1px;
-	z-index: 3000!important;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
+	z-index: 3000 !important;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 	padding-top: 10px;
 }
+
 .bootstrap-datetimepicker-widget:before {
 	content: '';
 	display: inline-block;
@@ -58,6 +66,7 @@
 	top: -7px;
 	left: 6px;
 }
+
 .bootstrap-datetimepicker-widget:after {
 	content: '';
 	display: inline-block;
@@ -68,57 +77,69 @@
 	top: -6px;
 	left: 7px;
 }
+
 .bootstrap-datetimepicker-widget.pull-right:before {
 	left: auto;
 	right: 6px
 }
+
 .bootstrap-datetimepicker-widget.pull-right:after {
 	left: auto;
 	right: 7px;
 }
+
 .bootstrap-datetimepicker-widget > ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
+
 .bootstrap-datetimepicker-widget .timepicker {
 	margin-bottom: 15px;
 }
+
 .bootstrap-datetimepicker-widget .timepicker-hour,
 .bootstrap-datetimepicker-widget .timepicker-minute, .bootstrap-datetimepicker-widget .timepicker-second {
 	/*width: 100%;*/
 	font-weight: bold;
 	font-size: 1.1em;
 }
+
 .bootstrap-datetimepicker-widget table[data-hour-format="12"] .separator {
 	width: 4px;
 	padding: 0;
 	margin: 0;
 }
+
 .bootstrap-datetimepicker-widget .datepicker > div {
 	display: none;
 }
+
 .bootstrap-datetimepicker-widget .picker-switch {
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+
 .bootstrap-datetimepicker-widget .picker-switch i {
 	font-size: 24px;
 }
+
 .bootstrap-datetimepicker-widget table {
 	width: 100%;
 	margin: 0;
 }
+
 .bootstrap-datetimepicker-widget td,
 .bootstrap-datetimepicker-widget th {
 	text-align: center;
 	width: 20px;
 	height: 20px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
+
 .bootstrap-datetimepicker-widget td.day:hover,
 .bootstrap-datetimepicker-widget td.hour:hover,
 .bootstrap-datetimepicker-widget td.minute:hover,
@@ -126,57 +147,45 @@
 	background: #eee;
 	cursor: pointer;
 }
+
 .bootstrap-datetimepicker-widget td span.old,
 .bootstrap-datetimepicker-widget td.old,
 .bootstrap-datetimepicker-widget td.new {
 	color: #999;
 }
+
+.bootstrap-datetimepicker-widget td.active:active,
 .bootstrap-datetimepicker-widget td span.active,
 .bootstrap-datetimepicker-widget td.active,
-.bootstrap-datetimepicker-widget td.active:hover {
-	color: #fff;
-	background-color: #006dcc;
-	background-image: -moz-linear-gradient(top, #08c, #04c);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
-	background-image: -webkit-linear-gradient(top, #08c, #04c);
-	background-image: -o-linear-gradient(top, #08c, #04c);
-	background-image: linear-gradient(to bottom, #08c, #04c);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
-	border-color: #04c #04c #002a80;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	*background-color: #04c;
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-.bootstrap-datetimepicker-widget td span.active:hover,
 .bootstrap-datetimepicker-widget td span.active:active,
 .bootstrap-datetimepicker-widget td span.active.active,
-.bootstrap-datetimepicker-widget td span.active.disabled,
-.bootstrap-datetimepicker-widget td span.active[disabled],
+.bootstrap-datetimepicker-widget td span.active:active,
+.bootstrap-datetimepicker-widget td span.active.active,
+.bootstrap-datetimepicker-widget td.active:active,
+.bootstrap-datetimepicker-widget td.active.active {
+	color: #fff;
+	background-color: #0d5fce;
+	border-color: #1e45a3;
+}
+
+.bootstrap-datetimepicker-widget td.active:hover:active,
+.bootstrap-datetimepicker-widget td.active:hover,
+.bootstrap-datetimepicker-widget td span.active:hover,
 .bootstrap-datetimepicker-widget td.active:hover,
 .bootstrap-datetimepicker-widget td.active:hover:hover,
-.bootstrap-datetimepicker-widget td.active:active,
 .bootstrap-datetimepicker-widget td.active:hover:active,
-.bootstrap-datetimepicker-widget td.active.active,
 .bootstrap-datetimepicker-widget td.active:hover.active,
+.bootstrap-datetimepicker-widget td.active:hover.active {
+	color: #fff;
+	background-color: #1e45a3;
+}
+
 .bootstrap-datetimepicker-widget td.active.disabled,
 .bootstrap-datetimepicker-widget td.active:hover.disabled,
 .bootstrap-datetimepicker-widget td.active[disabled],
-.bootstrap-datetimepicker-widget td.active:hover[disabled] {
-	color: #fff;
-	background-color: #04c;
-	*background-color: #003bb3;
-}
-.bootstrap-datetimepicker-widget td span.active:active,
-.bootstrap-datetimepicker-widget td span.active.active,
-.bootstrap-datetimepicker-widget td.active:active,
-.bootstrap-datetimepicker-widget td.active:hover:active,
-.bootstrap-datetimepicker-widget td.active.active,
-.bootstrap-datetimepicker-widget td.active:hover.active {
-	background-color: #039 \9
-}
+.bootstrap-datetimepicker-widget td.active:hover[disabled],
+.bootstrap-datetimepicker-widget td span.active.disabled,
+.bootstrap-datetimepicker-widget td span.active[disabled],
 .bootstrap-datetimepicker-widget th.disabled,
 .bootstrap-datetimepicker-widget th.disabled:hover,
 .bootstrap-datetimepicker-widget td span.disabled,
@@ -187,6 +196,7 @@
 	color: #999;
 	cursor: not-allowed;
 }
+
 .bootstrap-datetimepicker-widget td span {
 	display: block;
 	width: 47px;
@@ -199,6 +209,7 @@
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 }
+
 .bootstrap-datetimepicker-widget td span.year,
 .bootstrap-datetimepicker-widget td span.month {
 	display: inline-block;
@@ -211,13 +222,16 @@
 .bootstrap-datetimepicker-widget td span:hover {
 	background: #eee;
 }
+
 .bootstrap-datetimepicker-widget th.switch {
 	width: 145px;
 }
+
 .bootstrap-datetimepicker-widget th.next,
 .bootstrap-datetimepicker-widget th.prev {
 	font-size: 21px;
 }
+
 .input-group.date,
 .input-append.date,
 .ctrl-set-now,
@@ -226,9 +240,11 @@
 .bootstrap-datetimepicker-widget thead tr:first-child th {
 	cursor: pointer;
 }
+
 .bootstrap-datetimepicker-widget thead tr:first-child th:hover {
 	background: #eee;
 }
+
 .add-on i,
 .input-prepend.date .add-on i {
 	display: block;
@@ -236,23 +252,28 @@
 	width: 16px;
 	height: 16px;
 }
+
 .bootstrap-datetimepicker-widget.left-oriented:before {
 	left: auto;
 	right: 6px;
 }
+
 .bootstrap-datetimepicker-widget.left-oriented:after {
 	left: auto;
 	right: 7px;
 }
+
 .bootstrap-datetimepicker-widget a [class^="icon-"] {
 	padding-left: 10px;
 	padding-right: 10px;
-	color: #0D5FCE;
+	color: #0d5fce;
 	text-decoration: none;
 }
+
 .bootstrap-datetimepicker-widget.dropdown-menu {
 	padding: 5px 5px;
 }
+
 .bootstrap-datetimepicker-widget.dropdown-menu li > a {
 	padding: 3px 6px;
 	background-color: white;
