less files moved to css folder

--- a/Site/media/css/sobipro.less
+++ b/Site/media/css/sobipro.less
@@ -4,9 +4,9 @@
  * @author
  * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
  * Email: sobi[at]sigsiu.net
- * Url: http://www.Sigsiu.NET
+ * Url: https://www.Sigsiu.NET
 
- * @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+ * @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
  * @license GNU/GPL Version 3
  * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
  * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -28,4 +28,20 @@ iframe, svg { max-width: inherit; }
   font-size: 9px;
   padding-top: 10px;
   text-decoration: none;
+}
+
+@media (min-width: 481px) and (max-width: 979px) {
+	.input-splarge {
+		width: calc(100% - 10px);
+		margin-right: 10px;
+	}
+}@media (max-width: 767px) {
+	.input-splarge {
+		display: block;
+		width: 100%;
+		min-height: 30px;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	}
 }
