--- a/Site/media/css/icons.less
+++ b/Site/media/css/icons.less
@@ -4,12 +4,15 @@
   }
 }
 
+a [class^="icon-"],
+a [class*=" icon-"],
 .SobiPro a [class^="icon-"],
 .SobiPro a [class*=" icon-"] {
     background-image: none;
-	margin-right: 0;
 }
 /** For Joomla! 3.0 default template */
+[class^="icon-"]::before,
+[class*=" icon-"]::before,
 .SobiPro [class^="icon-"]::before,
 .SobiPro [class*=" icon-"]::before {
   font-family: 'FontAwesome';
@@ -17,8 +20,8 @@
   speak: none;
   color: inherit;
 }
+.icon-eye:before { content: "\f06e"; }
 .SobiPro .icon-eye:before { content: "\f06e"; }
 
-.SobiPro {
-	#ns > .SobiPro;
-}
+#ns > .SobiPro;
+
