--- a/Admin/template/edit.xml
+++ b/Admin/template/edit.xml
@@ -20,7 +20,7 @@
 		<title value="TP.EDIT_SITE_TITLE" />
 		<file type="script" filename="adm.template" />
 	</header>
-	<toolbar title="var:[site_title]" icon="SobiTemplate" class="template edit">
+	<toolbar title="var:[site_title]" icon="" class="template edit">
 		<button type="apply" task="template.save">
 			<button type="duplicate" task="template.saveAs" />
 			<button type="compile" task="template.compile" condition="file_ext=less" />
