--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -499,6 +499,11 @@
 		}
 		.SpCellLeft {
 			text-align: left;
+			.valid.primary:after {
+				content: "\f0a3";
+				font-family: FontAwesome;
+				color: #0064cd;
+			}
 		}
 		.SpCellArrowCol {
 			width: 90px;
