calendar styles added

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2325,6 +2325,17 @@ body.modal-open {
 		font-weight: 400;
 	}
 
+	.spCalendarLabel.label-info,
+	.SpCalEntry.label-info {
+		background-color: lighten(@alert-color,10%);
+		color: @active-color;
+
+		a {
+			color: @base-color;
+			text-shadow: none;
+		}
+	}
+
 	.spClassCalendarRepeat {
 		margin-top: 5px;
 	}
