(#) Calendar Field in entry form shown wrong (CSS)

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1960,6 +1960,16 @@ body.modal-open {
 		margin: 0 0 10px 5px;
 	}
 
+	.spSelectRangeFrom .input-group.input-append,
+	.spSelectRangeTo .input-group.input-append {
+		margin-bottom: 0;
+	}
+
+	.spClassCalendarRepeat select {
+		margin-top: 10px
+	}
+
+
 	// Edit entry payment control
 	// ----------------------------------------
 	.control-label div.paybox span {
