(+) Basic template development support added (fields highlighting) (#) Class css-search not output in the template

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -517,6 +517,103 @@ body.modal-open {
 		margin-bottom: 40px;
 	}
 
+	.development {
+		border: 1px dashed grey;
+		background-color: #ebebeb;
+
+		&.namefield,
+		&.spClassSearchInbox,
+		&.spClassEditInbox,
+		&.spClassViewInbox {
+			background-color: #fde9e2;
+		}
+		&.spClassSearchCheckbox,
+		&.spClassEditCheckbox,
+		&.spClassViewCheckbox {
+			background-color: #ddfde5;
+		}
+		&.spClassSearchRadio,
+		&.spClassEditRadio,
+		&.spClassViewRadio {
+			background-color: #dfebfd;
+		}
+		&.spClassSearchUrl,
+		&.spClassEditUrl,
+		&.spClassViewUrl {
+			background-color: #fdf8d9;
+		}
+		&.spClassSearchEmail,
+		&.spClassEditEmail,
+		&.spClassViewEmail {
+			background-color: #fdeaf5;
+		}
+		&.spClassSearchImage,
+		&.spClassEditImage,
+		&.spClassViewImage {
+			background-color: #e7fffd;
+		}
+		&.spClassSearchSelect,
+		&.spClassEditSelect,
+		&.spClassViewSelect {
+			background-color: #ededfd;
+		}
+		&.spClassSearchInfo,
+		&.spClassEditInfo,
+		&.spClassViewInfo {
+			background-color: #ffe7ec;
+		}
+		&.spClassSearchMSelect,
+		&.spClassEditMSelect,
+		&.spClassViewMSelect {
+			background-color: #e8fdee;
+		}
+		&.spClassSearchText,
+		&.spClassEditText,
+		&.spClassViewText {
+			background-color: #e3f5fd;
+		}
+		&.spClassSearchButton,
+		&.spClassEditButton,
+		&.spClassViewButton {
+			background-color: #f2ffd4;
+		}
+		&.spClassSearchCategory,
+		&.spClassEditCategory,
+		&.spClassViewCategory {
+			background-color: #fbe5f3;
+		}
+		&.spClassSearchCalendar,
+		&.spClassEditCalendar,
+		&.spClassViewCalendar {
+			background-color: #e6fddd;
+		}
+		&.spClassSearchGallery,
+		&.spClassEditGallery,
+		&.spClassViewGallery {
+			background-color: #fff1e6;
+		}
+		&.spClassSearchAggregation,
+		&.spClassEditAggregation,
+		&.spClassViewAggregation {
+			background-color: #f1f6fe;
+		}
+		&.spClassSearchProfile,
+		&.spClassEditProfile,
+		&.spClassViewProfile {
+			background-color: #f7f1fe;
+		}
+		&.spClassSearchMap,
+		&.spClassEditMap,
+		&.spClassViewMap {
+			background-color: #f9fbde;
+		}
+		&.spClassSearchQRCode,
+		&.spClassEditQRCode,
+		&.spClassViewQRCode {
+			background-color: #defef2;
+		}
+	}
+
 	//otherwise buttons are a bit too high to align with input boxes
 	.btn i {
 		//font-size: 0.97em; //removes the possibility to resize the icon in a button
@@ -1973,7 +2070,6 @@ body.modal-open {
 	.spClassCalendarRepeat select {
 		margin-top: 10px
 	}
-
 
 	// Edit entry payment control
 	// ----------------------------------------
