(#) Missing input range search styles added

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2053,6 +2053,8 @@ body.modal-open {
 	}
 
 	// Range inputs
+	.spInputRangeFrom input,
+	.spInputRangeTo input,
 	.spSelectRangeFrom select,
 	.spSelectRangeTo select,
 	.spSelectRangeFrom .input-group,
@@ -2061,11 +2063,13 @@ body.modal-open {
 		width: calc(100% / 2 - 5px);
 	}
 
+	.spInputRangeFrom input,
 	.spSelectRangeFrom select,
 	.spSelectRangeFrom .input-group {
 		margin: 0 5px 10px 0;
 	}
 
+	.spInputRangeTo input,
 	.spSelectRangeTo select,
 	.spSelectRangeTo .input-group {
 		margin: 0 0 10px 5px;
