(+) Basic template development support added (fields highlighting); addendum 4

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -621,8 +621,12 @@ body.modal-open {
 		&.spClassViewContact {
 			background-color: #fbeadb;
 		}
+		&.form-group {
+			margin-bottom: 14px;
+			margin-right: -14px;
+			margin-left: -14px;
+		}
 	}
-
 	//otherwise buttons are a bit too high to align with input boxes
 	.btn i {
 		//font-size: 0.97em; //removes the possibility to resize the icon in a button
