(#) Range search with suffix not styled

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2057,24 +2057,24 @@ body.modal-open {
 	}
 
 	// Range inputs
-	.spInputRangeFrom input,
-	.spInputRangeTo input,
-	.spSelectRangeFrom select,
-	.spSelectRangeTo select,
+	.spRangeFrom input,
+	.spRangeTo input,
+	.spRangeFrom select,
+	.spRangeTo select,
 	.spSelectRangeFrom .input-group,
 	.spSelectRangeTo .input-group {
 		float: left;
 		width: calc(100% / 2 - 5px);
 	}
 
-	.spInputRangeFrom input,
-	.spSelectRangeFrom select,
+	.spRangeFrom select,
+	.spRangeFrom input,
 	.spSelectRangeFrom .input-group {
 		margin: 0 5px 10px 0;
 	}
 
-	.spInputRangeTo input,
-	.spSelectRangeTo select,
+	.spRangeTo select,
+	.spRangeTo input,
 	.spSelectRangeTo .input-group {
 		margin: 0 0 10px 5px;
 	}
