(!) Layout improvement of payment control in entry form

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2091,20 +2091,17 @@ body.modal-open {
 
 	// Edit entry payment control
 	// ----------------------------------------
-	.control-label div.paybox span {
-		border-radius: 45px;
-		padding: 5px 9px 9px 9px;
-		border: 1px solid darken(@alert-color, 10%);;
-		background-color: @alert-color;
-	}
+	.form-group {
+		.paytext {
+			margin-top: 15px;
+			margin-bottom: 15px;
+			font-weight: 500;
+		}
 
-	.form-inline .control-label div.paybox {
-		margin-bottom: 12px;
-	}
-
-	.form-group.payment-message,
-	.control-group.payment-message {
-		padding-top: 10px;
+		.paybox {
+			border-radius: 45px;
+			padding: 11px 0 0;
+		}
 	}
 
 	// Search
