less comment lines in org. B3 files

--- a/Site/media/css/b3bootstrap/b3bootstrap.less
+++ b/Site/media/css/b3bootstrap/b3bootstrap.less
@@ -1,8 +1,2 @@
-#ns {
-	.SobiPro() {
-		@import "bootstrap.org.less";
-	}
-}
-.SobiPro {
-	#ns > .SobiPro;
-}
+#ns { .SobiPro() { @import "bootstrap.org.less"; } }
+.SobiPro { #ns > .SobiPro; }
